Update VcfAlleleParser to allocate precisely sized array for return alleles Update comments in Uk10kAlleleParser