@@ -28,7 +28,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -45,7 +44,7 @@ public abstract class VcfAlleleParser implements AlleleParser {
     public List<Allele> parseLine(String line) {
         if (line.startsWith("#")) {
             // comment line.
-            return Collections.emptyList();
+            return List.of();
         }
         String[] fields = line.split("\t");
         List<Allele> alleles = parseAlleles(fields);
@@ -74,7 +73,7 @@ public abstract class VcfAlleleParser implements AlleleParser {
 
         int chr = Contigs.parseId(fields[0]);
         if (chr == 0 || !unfilteredOrPassed(fields[6])) {
-            return Collections.emptyList();
+            return List.of();
         }
 
         int pos = Integer.parseInt(fields[1]);
@@ -93,7 +92,7 @@ public abstract class VcfAlleleParser implements AlleleParser {
         //should be skipped
         String[] alts = fields[4].toUpperCase().split(",");
 
-        List<Allele> alleles = new ArrayList<>();
+        List<Allele> alleles = new ArrayList<>(alts.length);
         for (int i = 0; i < alts.length; i++) {
             Allele allele = makeAllele(chr, pos, ref, alts[i]);
             allele.setRsId(rsId);
